--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       <section id="main_content" class="inner">
           <p><h3>Motivation</h3>
             To limit the spread of COVID and other pathogens by flipping the norm of an everyday object, the keyboard and mouse, to help users identify peripherals that are unclean.</p>
-          <p> <h3>5 Week Milestones</h3>
-          <b>Week 1:</b> Come up with the initial idea, sketch out a use case.<br>
-          <b>Week 2:</b> Come up with a name and finalize the concept. Iron out any roughnes with the idea.<br>
-          <b>Week 3:</b> Refine idea with feedback from Professor.  Low fidelity cardboard prototype.<br>
-          <b>Week 4:</b> Work out bugs of low fidelity prototype. Begin 3D prototyping the design and system.<br>
-          <b>Week 5:</b> Create video demonstrating the use case and situation the keyboard would be used in.</p>
+          <p> <h3>Weekly Milestones</h3>
+          <b>Week 1:</b> Come up with the initial idea and sketch out a use case.<br>
+          <b>Week 2:</b> Come up with a name and finalize the concept. Iron out details and any roughness with the idea.<br>
+          <b>Week 3:</b> Refine idea with feedback. Create a low fidelity cardboard prototype.<br>
+          <b>Week 4:</b> Work out any bugs of low fidelity prototype. Begin 3D prototyping the design and system.<br>
+          <b>Week 5:</b> Create video demonstrating the use case and situations the keyboard would be used in.</p>
           <p><h3>Team Members</h3>
             Luke Milhorn, Nathaniel Singewald, James Cuaderes, Fernando De La Fuente, Andrew Plaisance</p>
       </section>
