Updated formatting, added background

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.tamu.edu/lukemilhorn/436finalterm">View on GitHub</a>
 
           <h1 id="project_title">Team 6 - I Don&#39;t Know Anyone in this Class</h1>
-          <h2 id="project_tagline">Final Term Project</h2>
+          <h2 id="project_tagline">Final Term Project: The CleanBoard</h2>
 
         </header>
     </div>
@@ -28,27 +28,41 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
           <p><h3>Motivation</h3>
-          We seek to promote health and safety by flipping the norm of an everyday object in shared, public spaces to help users identify when and where they are at risk.</p>
-          <p><h3>Week 1:</h3> Come up with the initial idea and identify a use case.<br>
-          Considering that our midterm project about incentivizing hand sanitization ended up being similar to other groups, we wanted to do something different. However, we wanted to stay on our previous theme of promoting health and safety by reducing the spread of germs.
-          We ultimately decided to design a keyboard that changes color wherever it is touched, indicating that it is dirty. Keyboards are high contact surfaces that many people overlook when it comes to cleaning, so our project focuses on that.
-          There are countless use cases, most relevant is the shared computer labs like those on campus. We believe a simple visual cue will do a wonderful job to remind users how dirty a keyboard can be, especially a shared one.
-          <h3>Week 2:</h3> Come up with a name and finalize the concept. Iron out details and any roughness with the idea. Make a p5.js demo of the keyboard interface. <br>
-          It ended up taking longer to name the product that it did to come up with the idea. We settled on calling it "The CleanBoard." <a href="https://www.youtube.com/watch?v=p0ldyQs4wDw">Here</a> is a demo that depicts the detailed states of our keyboard and how they are altered by interaction.
-          We made several iterations over the weeks and made several improvements with this demo, such as playing with the colors the keyboard will be, adding an LED that displays if the keyboard is clean or not for colorblind users, adding a timer that turns all keys dirty after a certain point in time to account for airborne germs, and making sure the keyboard starts all red.
-          <h3>Week 3:</h3> Create a low fidelity cardboard prototype.<br>
+          We seek to promote health and safety by flipping the norm of an everyday object, a keyboard, in shared, public spaces to help users identify when and where they are at risk.</p>
+
+          <p><h3>Background</h3>
+          While there has been a increased societal focus on reducing the spread of germs due to the ongoing pandemic, we believe it will always remain important for individuals to always be congnizant of the risks they expose their health and wellbeing to.
+          Access to public, shared computers is a critical resource in an increasingly online world, especially for those without reliable access to a computer or internet connection.
+          In 2015, The Pew Research Center of Internet and Technology reported that 31% of those living in homes whose annual incomes are $30,000 or less have used a library computer or internet connection.
+          A research study by the University of Arizona found that the average keyboard has 400 times more bacteria than the average toilet seat. In addition, shared keyboards tend to have more bacteria than those used by one person.
+          Those without computers should not have to unknowingly place their health at risk to use such a critical resource.
+          We believe we can flip the norm of the keyboard to intuitively remind users how dirty keyboards actually are, providing them with the necessary information to make an educated decision on their health.
+          </p>
+
+          <p><h3>Week 1: Come up with the initial idea and identify a use case.</h3>
+          Considering that our midterm project about incentivizing hand sanitization ended up being far too similar to other groups, we wanted to do something different. However, we wanted to stay on our previous theme of promoting health and safety by reducing the spread of germs.
+          We ultimately decided to design a keyboard that changes color wherever it is touched to indicate that it is dirty. Keyboards are high contact surfaces that many people overlook when it comes to cleaning, so our project focuses on that.
+          There are countless use cases, perhaps the most relevant is in the shared computer labs like those we have on campus. We believe a simple visual cue will do a wonderful job to remind users how dirty a keyboard can be, especially a shared one.</p>
+
+          <p><h3>Week 2: Come up with a name and finalize the concept. Iron out details and any roughness with the idea. Make a p5.js demo of the keyboard interface. </h3>
+          It ended up taking longer to name the product that it did to come up with the idea. We settled on calling it "The CleanBoard." <a href="https://www.youtube.com/watch?v=p0ldyQs4wDw">Here is a demo that depicts the detailed states of our keyboard and how they are altered by interaction.</a>
+          We made several iterations over the weeks to reflect several improvements to the idea, such as experimenting with the colors the keyboard will be, adding an LED that displays if the keyboard is clean or not for colorblind users, adding a timer that turns all keys dirty after a certain point in time to account for airborne germs, and making sure the keyboard starts all red. </p>
+
+          <p><h3>Week 3: Create a low fidelity cardboard prototype.</h3>
           This week the team successfully constructed a low-fi cardboard prototype of the CleanBoard.  To create this functional prototype, we utilized the techniques learned from this class to convey a dynamic change of state via a sliding paper keyboard with different colors.
-          This prototype is an effective tool to demonstrate how our product will transition from the "dirty" state to the "clean" state and vice versa.
-          <img src="images/CardboardPhoto.jpg" alt="Low Fidelity Cardboard Prototpye">
-          <h3>Week 4:</h3> Create a 3D prototype of the design. Create videos to demonstrate the various use cases with our prototypes,<br>
-          In week 4, we wanted to visualize our product in a more detailed setting. We created a walk through scenario in SketchUp which displayed the CleanBoard in a computer lab environment where a janitor would use the color changing keys to determine whether it was necessary to sanitize the keyboard.
+          This prototype is an effective tool to demonstrate how our product will transition from the "dirty" state to the "clean" state and vice versa. <br>
+          <img src="images/CardboardProto.png" alt="Low Fidelity Cardboard Prototpye"> </p>
+
+          <p><h3>Week 4: Create a 3D prototype of the design. Record videos to demonstrate the various use cases with our prototypes.</h3>
+          In week 4, we wanted to visualize our product in a more detailed setting. We created a walk through scenario in SketchUp which displays the CleanBoard in a computer lab environment where a janitor would use the color changing keys to determine whether it was necessary to sanitize the keyboard.
           The main change we made to the product this week was the default colors on the keyboard- in order to combat color blindness, we chose blue as a primary (clean) color and orange as a secondary (unclean) color as this would be an example of a high contrast color switch.
           We eventually decided that the "clean" and "unclean" colors should be an easily customizable feature on our final product, rather than an out of the box decision.
-          <a href="https://www.youtube.com/watch?v=p0ldyQs4wDw">Here</a> is a video using our various prototypes that displays the use cases of the keyboard.
-          <img src="images/4a1" alt="3D Model of CleanBoard: Clean State">
-          <img src="images/4a2" alt="3D Model of CleanBoard: Dirty State">
-          <h3>Week 5:</h3>Create a video using our use cases, prototypes, and animations to demonstrate the significance and functionality of our prototype.</p>
-          <a href="https://www.youtube.com/watch?v=4C7OODXSSvY">Here</a> is our final video that sums up the work we have done in the past 5 weeks to develop our idea: The CleanBoard.
+          <a href="https://youtu.be/8pMH5UfrR0g">Here is a video using our various prototypes that displays the use cases of the keyboard. </a><br>
+          <img src="images/4a1.png" alt="3D Model of CleanBoard: Clean State">
+          <img src="images/4a2.png" alt="3D Model of CleanBoard: Dirty State"></p>
+
+          <p><h3>Week 5: Create a video using our use cases, prototypes, and animations to demonstrate the significance and functionality of our prototype.</h3>
+          <a href="https://www.youtube.com/watch?v=4C7OODXSSvY">Here is our final video that sums up the work we have done in the past 5 weeks to develop our idea: The CleanBoard.</a></p>
           <p><h3>Team Members</h3>
             Luke Milhorn, Nathaniel Singewald, James Cuaderes, Fernando De La Fuente, Andrew Plaisance</p>
       </section>
